# scraper

./: .editorconfig  .env.example  .gitignore  DEVELOPMENT_SETUP.md  DOCUMENTATION_SUMMARY.md  Makefile.bat  PROJECT_STATUS.md  README.md  REFACTORING_COMPLETE.md  REFACTORING_STEP1_SUMMARY.md  dev-commands.ps1  example_batch_usage.py  example_usage.py  pyproject.toml  ruff.toml
src/regscraper/: __init__.py  __main__.py  batch.py  config.py  logging.py  main.py  types.py
src/regscraper/core/: scraper.py  scraper_v3.py
src/regscraper/downloader/: HttpDownloader.py  PlaywrightDownloader.py  factory.py  http.py  http_downloader.py  playwright.py
src/regscraper/extractor/: docx.py  factory.py  html.py  llm.py  pdf.py  schema.py
src/regscraper/extractors/: base.py  docx_extractor.py  pdf_extractor.py
src/regscraper/fetcher/: dynamic.py  session.py  static.py
src/regscraper/infrastructure/: __init__.py  domain.py  robots.py  throttle.py
src/regscraper/interfaces/: __init__.py
src/regscraper/parser/: docx.py  docx_v2.py  html.py  pdf.py  pdf_v2.py  rss.py
src/regscraper/processors/: base.py  docx_processor.py  factory.py  html_processor.py  pdf_processor.py  rss_processor.py
src/regscraper/storage/: db.py  files.py
src/regscraper/throttler/: domain.py  robots.py
src/regscraper/utils/: urls.py
src/regscraper_v2/downloaders/: factory.py  implementations.py
tests/: integration.py  test_async.py  test_basic.py  test_batch.py  test_integration.py  test_integration_regscraper_v2.py  test_processors.py  test_refactoring.py  test_regscraper_v2.py  test_urls.py
(+4 files in other folders)
